--- a/Pages/Login/index.html
+++ b/Pages/Login/index.html
@@ -64,7 +64,7 @@
               <input
                 class="enter-your-email"
                 placeholder="Enter your email address"
-                type="text"
+                type="password"
               />
             </div>
             <div class="component-child"></div>
@@ -154,7 +154,12 @@
         <div class="back-button">
           <img class="saly-10-icon" alt="" src="./public/saly10@2x.png" />
 
-          <div class="back-to-the">Back to the website</div>
+          <div class="back-to-the">
+            <a href="https://www.google.com/" style="color:whitesmoke">
+              Back to the website
+            </a>
+            
+          </div>
         </div>
       </div>
     </div>
