Update image alt attributes

--- a/Pages/Home/index.html
+++ b/Pages/Home/index.html
@@ -58,27 +58,27 @@
                   </div>
                   <div class="call">
                     <p class="text-wrapper-5">Call Us <br />(00) 112 365 489</p>
-                    <div class="icon"><img class="vector-2" src="img/vector-4.svg" /></div>
+                    <div class="icon"><img class="vector-2" src="img/vector-4.svg" alt="image" /></div>
                   </div>
                 </div>
               </div>
             </div>
-            <img class="image" src="img/image-2.png" />
+            <img class="image" src="img/image-2.png"  alt="image"/>
           </div>
         </footer>
         <div class="overlap-2">
           <div class="why-choose-us">
-            <img class="pattern-5" src="img/pattern.svg" />
-            <img class="unsplash-MD" src="img/unsplash-md-ha01bk7c.png" />
+            <img class="pattern-5" src="img/pattern.svg"  alt="image"/>
+            <img class="unsplash-MD" src="img/unsplash-md-ha01bk7c.png"  alt="image"/>
           </div>
           <div class="project">
-            <img class="background-2" src="img/background-3.svg" />
+            <img class="background-2" src="img/background-3.svg" alt="image" />
             <div class="content-4"><div class="text-wrapper-6">Party Planning Roadmap</div></div>
           </div>
           <div class="about">
             <div class="overlap-wrapper">
               <div class="overlap-3">
-                <img class="background-3" src="img/background-2.png" />
+                <img class="background-3" src="img/background-2.png" alt="image" />
                 <div class="overlap-group-wrapper">
                   <div class="overlap-4">
                     <div class="background-4"></div>
