Refactor userlogin.php and connectin.php, update HTML files

--- a/Pages/Register-Ordinary/index.html
+++ b/Pages/Register-Ordinary/index.html
@@ -13,10 +13,11 @@
           <div class="group"><div class="group-2"></div></div>
           <div class="back-to-website">
             <div class="text-wrapper">Back to the website</div>
-            <img class="icon-left" src="img/icon-left.svg" />
+            <img class="icon-left" src="img/icon-left.svg" alt="new" />
           </div>
         </div>
         <div class="group-3">
+          <form name="registration" method="POST" action="../../Backend/usersave.php";"></form>
           <div class="group-4">
             <div class="text-wrapper-2">Sign up</div>
             <div class="group-5">
@@ -63,6 +64,7 @@
               <img class="user" src="img/user-1.svg" />
             </div>
           </div>
+        </form>
         </div>
       </div>
     </div>
