Update input placeholders and names in Register-Ordinary page

--- a/Pages/Register-Ordinary/index.html
+++ b/Pages/Register-Ordinary/index.html
@@ -29,7 +29,12 @@
           </div>
           <div class="group-6">
             <div class="text-wrapper-4">Email</div>
-            <div class="text-wrapper-5">Enter your email address</div>
+            <input
+            class="text-wrapper-5"
+            placeholder="Enter your Email"
+            type="text"
+            name="password"
+          />
             <div class="rectangle"></div>
             <img class="message" src="img/message-1.svg" />
           </div>
@@ -37,19 +42,29 @@
             <div class="text-wrapper-6">Confrim Password</div>
             <div class="rectangle-2"></div>
             <div class="group-8">
-              <div class="text-wrapper-7">Confrim your Password</div>
+              <input
+            class="text-wrapper-7"
+            placeholder="Confrim Your Password"
+            type="text"
+            name="text"
+          />
               <img class="padlock" src="img/padlock-1-1.svg" />
             </div>
-            <img class="invisible" src="img/invisible-1-1.svg" />
+            
           </div>
           <div class="group-9">
             <div class="text-wrapper-6">Password</div>
             <div class="rectangle-2"></div>
             <div class="group-10">
-              <div class="text-wrapper-7">Enter your Password</div>
+              <input
+            class="text-wrapper-7"
+            placeholder="Enter your Password"
+            type="text"
+            name="text"
+          />
               <img class="img" src="img/padlock-1.svg" />
             </div>
-            <img class="invisible" src="img/invisible-1.svg" />
+           
           </div>
           <div class="overlap-group-wrapper">
             <div class="overlap-group"><div class="text-wrapper-8">Register</div></div>
@@ -58,7 +73,12 @@
             <div class="overlap-2">
               <div class="group-11">
                 <div class="text-wrapper-4">Username</div>
-                <div class="text-wrapper-5">Enter your User name</div>
+                <input
+            class="text-wrapper-5"
+            placeholder="Enter your User Name"
+            type="text"
+            name="text"
+          />
                 <div class="rectangle-3"></div>
               </div>
               <img class="user" src="img/user-1.svg" />
