Fix styling issues and update form fields***

--- a/Pages/Login/LoginUser.html
+++ b/Pages/Login/LoginUser.html
@@ -36,9 +36,9 @@
             </div>
           </div>
 
-          <form id="loginForm" action="your_php_handler.php" method="post">
+          <form action="../../Backend/login.php" method="post">
             <div class="email-parent">
-              <div class="email">Email</div>
+              <div class="email">Username</div>
               <div class="message-1-parent">
                 <img
                   class="message-1-icon"
@@ -47,9 +47,10 @@
                 />
                 <input
                   class="enter-your-email"
-                  placeholder="Enter your email address"
+                  placeholder="Enter your UserName
+                address"
                   type="text"
-                  name="email"
+                  name="username"
                 />
               </div>
               <div class="component-child"></div>
