Delete unnecessary files and code

--- a/Pages/Login-Admin/index.html
+++ b/Pages/Login-Admin/index.html
@@ -12,7 +12,9 @@
         <div class="overlap">
           <div class="group"><div class="group-2"></div></div>
           <div class="back-to-website">
-            <div class="text-wrapper">Back to the website</div>
+            <div class="text-wrapper">
+              <a href="www.google.com" style="color: whitesmoke;">Back to the website</a>
+            </div>
             <img class="icon-left" src="img/icon-left.svg" />
           </div>
         </div>
@@ -25,36 +27,45 @@
                 <div class="text-wrapper-3">and the password</div>
               </div>
             </div>
-            <div class="group-7">
-              <div class="group-8">
-                <div class="group-9">
-                  <div class="text-wrapper-4">Email</div>
-                  <div class="text-wrapper-5">Enter your email address</div>
-                  <div class="rectangle"></div>
-                  <img class="message" src="img/message-1.svg" />
-                </div>
-                <div class="group-10">
-                  <div class="text-wrapper-6">Password</div>
-                  <div class="rectangle-2"></div>
-                  <div class="group-11">
-                    <div class="text-wrapper-7">Enter your Password</div>
-                    <img class="padlock" src="img/padlock-1.svg" />
+            <form>
+              <div class="group-7">
+                <div class="group-8">
+                  <div class="group-9">
+                    <div class="text-wrapper-4">Email</div>
+                    <div class="text-wrapper-5">
+                      <input
+                        placeholder="Enter your Email"
+                        type="email"
+                        name="email"
+                      />
+                    </div>
+                    <div class="rectangle"></div>
+                    <img class="message" src="img/message-1.svg" />
                   </div>
-                  <img class="invisible" src="img/invisible-1.svg" />
+                  <div class="group-10">
+                    <div class="text-wrapper-6">Password</div>
+                    <div class="rectangle-2"></div>
+                    <div class="group-11">
+                      <div class="text-wrapper-7">
+                        <input
+                          placeholder="Enter your Password"
+                          type="password"
+                          name="password"
+                        />
+                      </div>
+                      <img class="padlock" src="img/padlock-1.svg" />
+                    </div>
+                  </div>
+                </div>
+                <div class="group-12"></div>
+                <div class="overlap-group-wrapper">
+                  <div class="overlap-group">
+                    <div class="text-wrapper-10">Login</div>
+                  </div>
                 </div>
               </div>
-              <div class="group-12">
-                <div class="rectangle-3"></div>
-                <div class="text-wrapper-8">Rememebr me</div>
-                <div class="text-wrapper-9">Forgot Password ?</div>
-              </div>
-              <div class="overlap-group-wrapper">
-                <div class="overlap-group"><div class="text-wrapper-10">Login</div></div>
-              </div>
-            </div>
+            </form>
           </div>
-          <div class="text-wrapper-11">or continue with</div>
-          <img class="img" src="img/group-13.png" />
         </div>
       </div>
     </div>
