--- a/Pages/Register-Ordinary/index.html
+++ b/Pages/Register-Ordinary/index.html
@@ -66,11 +66,11 @@
               </div>
             </div>
             <div class="overlap-group-wrapper">
-              <!-- <div class="overlap-group"><div class="text-wrapper-8">Register</div></div> -->
-              <button type="submit" class="overlap-group" value="submit">
-                Register
-              </button>
-            </div>
+              <button type="submit" class="overlap-group">
+                 <div class="text-wrapper-10">Login</div>
+               </button>
+               
+             </div>
             <div class="overlap-wrapper">
               <div class="overlap-2">
                 <div class="group-11">
