Add viewport meta element and alt attributes to images

--- a/Pages/Login-Admin/index.html
+++ b/Pages/Login-Admin/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> // Added viewport meta element
     <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="styleguide.css" />
     <link rel="stylesheet" href="style.css" />
@@ -15,7 +16,7 @@
             <div class="text-wrapper">
               <a href="www.google.com" style="color: whitesmoke;">Back to the website</a>
             </div>
-            <img class="icon-left" src="img/icon-left.svg" />
+            <img class="icon-left" src="img/icon-left.svg" alt="new" />
           </div>
         </div>
         <div class="group-3">
@@ -40,7 +41,7 @@
                       />
                     </div>
                     <div class="rectangle"></div>
-                    <img class="message" src="img/message-1.svg" />
+                    <img class="message" src="img/message-1.svg" alt="new" />
                   </div>
                   <div class="group-10">
                     <div class="text-wrapper-6">Password</div>
@@ -48,12 +49,12 @@
                     <div class="group-11">
                       <div class="text-wrapper-7">
                         <input
-                          placeholder="Enter your Password"
+                          placeholder="Luke I am your father"
                           type="password"
                           name="password"
                         />
-                      </div>
-                      <img class="padlock" src="img/padlock-1.svg" />
+                      </div> 
+                      <img class="padlock" src="img/padlock-1.svg" alt="new" />
                     </div>
                   </div>
                 </div>
