--- a/Pages/Login/LoginUser.html
+++ b/Pages/Login/LoginUser.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html>
   <head>
     <meta charset="utf-8" />
@@ -17,7 +17,7 @@
                 >Back to the website</a
               >
             </div>
-            <img class="icon-left" src="../Login-Admin/img/icon-left.svg" />
+            <img class="icon-left" src="../Login-Admin/img/icon-left.svg"  alt="new"/>
           </div>
         </div>
         <div class="group-3">
@@ -51,7 +51,7 @@
                     <div class="rectangle"></div>
                     <img
                       class="message"
-                      src="../Login-Admin/img/message-1.svg"
+                      src="../Login-Admin/img/message-1.svg" alt="new"
                     />
                   </div>
                   <div class="group-10">
@@ -67,7 +67,7 @@
                       </div>
                       <img
                         class="padlock"
-                        src="../Login-Admin/img/padlock-1.svg"
+                        src="../Login-Admin/img/padlock-1.svg" alt="new"
                       />
                     </div>
                   </div>
