--- a/Pages/Register-Ordinary/index.html
+++ b/Pages/Register-Ordinary/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> // Add viewport meta element
     <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="styleguide.css" />
     <link rel="stylesheet" href="style.css" />
@@ -37,7 +38,7 @@
                 name="email"
               />
               <div class="rectangle"></div>
-              <img class="message" src="img/message-1.svg" />
+              <img class="message" src="img/message-1.svg" alt="new" />
             </div>
             <div class="group-7">
               <div class="text-wrapper-6">Confrim Password</div>
@@ -49,7 +50,7 @@
                   type="password"
                   name="cpassword"
                 />
-                <img class="padlock" src="img/padlock-1-1.svg" />
+                <img class="padlock" src="img/padlock-1-1.svg" alt="'new" />
               </div>
             </div>
             <div class="group-9">
@@ -62,15 +63,14 @@
                   type="password"
                   name="password"
                 />
-                <img class="img" src="img/padlock-1.svg" />
+                <img class="img" src="img/padlock-1.svg" alt="new" />
               </div>
             </div>
             <div class="overlap-group-wrapper">
               <button type="submit" class="overlap-group">
-                 <div class="text-wrapper-10">Login</div>
-               </button>
-               
-             </div>
+                <div class="text-wrapper-10">Login</div>
+              </button>
+            </div>
             <div class="overlap-wrapper">
               <div class="overlap-2">
                 <div class="group-11">
@@ -83,7 +83,7 @@
                   />
                   <div class="rectangle-3"></div>
                 </div>
-                <img class="user" src="img/user-1.svg" />
+                <img class="user" src="img/user-1.svg" alt="" new />
               </div>
             </div>
           </form>
